--- a/index.html
+++ b/index.html
@@ -1,102 +1,76 @@
+html
 <!DOCTYPE html>
 <html lang="fr">
 <head>
   <meta charset="UTF-8">
-  <title>Portfolio - Saliou SENE</title>
+  <title>Accueil - Saliou SENE</title>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
-  <!-- En-tête -->
-  <header>
-    <h1 style="text-align:center;">Saliou SENE</h1>
-    <p style="text-align:center;">INGÉNIEUR EN SCIENCES AGRONOMIQUES</p>
-    <p style="text-align:center;">Passionné par les technologies modernes</p>
- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
+  
+ <nav class="navbar">
+  <ul>
+    <li><a href="index.html">Home</a></li>
+    <li><a href="about.html">About</a></li>
+    <li><a href="work.html">Work</a></li>
+    <li><a href="resume.html">Resume</a></li>
+    <li><a href="contact.html">Contact</a></li>
+  </ul>
+</nav>
+<header> <style>= /* Barre de navigation horizontale */
+.navbar {
+  background-color: #0d3b66;
+  padding: 15px 0;
+  position: fixed;
+  top: 0;
+  width: 100%;
+  z-index: 100;
+}
 
- 
- 
+.navbar ul {
+  list-style: none;
+  display: flex;
+  justify-content: center;
+  margin: 0;
+  padding: 0;
+}
+
+.navbar ul li {
+  margin: 0 20px;
+}
+
+.navbar ul li a {
+  text-decoration: none;
+  color: white;
+  font-weight: bold;
+  font-size: 18px;
+  transition: color 0.3s;
+}
+
+.navbar ul li a:hover {
+  color: #ffa500;
+}
+</style></header>
+  
+  <header style="text-align:center; padding: 50px;">
+    <h1>Saliou SENE</h1>
+    <p>Ingénieur agronome passionné par l’innovation technologique</p>
   </header>
 
-  <!-- Image principale -->
+  
   <section style="text-align:center;">
-    <img src="image/image (3).jpg" alt="Photo de Saliou SENE" width="200">
-    <p><small>Né le 25 septembre 1983 à Thiès, Sénégal</small></p>
+    <p><a href="about.html">En savoir plus sur moi</a></p>
+    <p><a href="work.html">Voir mes projets</a></p>
+    <p><a href="resume.html">Consulter mon parcours</a></p>
+    <p><a href="contact.html">Me contacter</a></p>
   </section>
 
-  <!-- Parcours -->
-  <main>
-    <h2 style="text-align:center;">Mon Parcours</h2>
-    <div style="text-align:justify; width:60%; margin:auto;">
-      <ul>
-        <li><strong>2000 :</strong> Diplôme BFEM</li>
-        <li><strong>2004 :</strong> Terminale S2</li>
-        <li><strong>2005 :</strong> Formation BT Électricité</li>
-        <li><strong>2006 :</strong> Technicien Eaux et Forêts</li>
-        <li><strong>2010 :</strong> Recrutement dans la Fonction Publique</li>
-        <li><strong>2024 :</strong> Formation Ingénierie Sciences Agronomiques</li>
-        <li><strong>2025 :</strong> Bootcamp Logiciels (Software)</li>
-      </ul>
-    </div>
-  </main>
-
-  <!-- Citation -->
-  <section>
-    <blockquote style="text-align:center;">
-      <p><em>"Allier les savoirs traditionnels aux technologies modernes pour construire un avenir durable."</em></p>
-      <footer>— Saliou SENE</footer>
-    </blockquote>
-  </section>
-
-  <!-- Audio -->
-  <section style="text-align:center;">
-    <h3 style="text-align:center;">Présentation audio</h3>
-    <audio controls>
-      <source src="audio/audio.mp3" type="audio/mp3">
-      Votre navigateur ne supporte pas l'audio.
-    </audio>
-  </section>
-
-  <!-- Formulaire -->
-  <section>
-
-
-
-    <h3 style="text-align:center;">Contactez-moi</h3>
-    <form style="max-width:400px; margin:auto; text-align:left;">
-  <label>
-    <i class="fa fa-user"></i> Nom :
-    <input type="text" name="nom" required>
-  </label><br><br>
-
-  <label>
-    <i class="fa fa-envelope"></i> Email :
-    <input type="email" name="email" required>
-  </label><br><br>
-
-  <label>
-    <i class="fa fa-comment-dots"></i> Message :
-    <textarea name="message" rows="4" required></textarea>
-  </label><br><br>
-
-  <input type="submit" value="Envoyer">
-</form>
-
  
- 
- 
- 
- 
- 
- 
- 
-  </section>
 
-
-  <!-- Pied de page -->
-  <footer style="text-align:center;">
-    <p>Merci d’avoir visité mon portfolio.</p>
+  <footer style="text-align:center; margin-top: 50px;">
+    <p>© 2025 Saliou SENE. Tous droits réservés.</p>
   </footer>
 
 </body>
 </html>
-
