mettre à jour index.html

--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@ html
 </head>
 <body>
 
-  
- <nav class="navbar">
+
+  <nav class="navbar">
   <ul>
     <li><a href="index.html">Home</a></li>
     <li><a href="about.html">About</a></li>
@@ -17,7 +17,12 @@ html
     <li><a href="resume.html">Resume</a></li>
     <li><a href="contact.html">Contact</a></li>
   </ul>
-</nav>
+</nav><br>
+  <section style="text-align:center;">
+    <img src="image/image (3).jpg" alt="Photo de Saliou SENE" width="300"><br>
+    <p><small>Né le 25 septembre 1983 à Thiès, Sénégal</small></p>
+  </section>
+ 
 <header> <style>= /* Barre de navigation horizontale */
 .navbar {
   background-color: #0d3b66;
@@ -58,7 +63,6 @@ html
     <p>Ingénieur agronome passionné par l’innovation technologique</p>
   </header>
 
-  
   <section style="text-align:center;">
     <p><a href="about.html">En savoir plus sur moi</a></p>
     <p><a href="work.html">Voir mes projets</a></p>
@@ -69,7 +73,7 @@ html
  
 
   <footer style="text-align:center; margin-top: 50px;">
-    <p>© 2025 Saliou SENE. Tous droits réservés.</p>
+    <p>2025 Saliou SENE. Tous droits réservés.</p>
   </footer>
 
 </body>
