--- a/about.html
+++ b/about.html
@@ -2,19 +2,25 @@
 <html lang="fr">
 <head>
   <meta charset="UTF-8">
-  <title>À propos - Saliou SENE</title>
-  <link rel="stylesheet" href="style.css">
-</head>
-<body>
+  <title>À propos</title>
+  <link rel="stylesheet" href="css/style.css">
+<section>
+  <h2 style="text-align: center;">À propos de moi</h2>
+  <h2>Présentation audio</h2>
+  <p>Écoutez une courte présentation :</p>
   
-
+  <audio controls>
+    <source src="audio/audio.mp3" type="audio/mpeg">
+    Votre navigateur ne supporte pas la balise audio.
+  </audio>
   
 <section id="about" style="width: 80%; margin: auto; padding-top: 100px;">
-  <h2 style="text-align: center;">À propos de moi</h2>
+  
   <p style="text-align: justify;">
     Ingénieur agronome passionné par l’innovation technologique, fort de 15 ans d’expérience dans le service public sénégalais.
     Actuellement détaché dans les Aires Marines Protégées, je suis engagé dans la préservation des ressources naturelles, tout en intégrant les outils numériques au service de l’environnement.
   </p>
+
 
   <h3>Formations professionnelles</h3>
   <ul>
@@ -55,7 +61,7 @@
     <li>Sens des relations humaines</li>
     <li>Ouverture d’esprit et contact facile</li>
   </ul>
-</section>
+</section></section>
 
  <div style="text-align: center; margin-top: 40px;">
   <a href="index.html">
