--- a/index.html
+++ b/index.html
@@ -1,80 +1,34 @@
-html
 <!DOCTYPE html>
 <html lang="fr">
 <head>
   <meta charset="UTF-8">
-  <title>Accueil - Saliou SENE</title>
-  <link rel="stylesheet" href="style.css">
-</head>
-<body>
+  <title>À propos - Saliou SENE</title>
+  <link rel="stylesheet" href="css/style.css">
+<div class="overlay"></div>
+ <section id="home">
+  <h1>Saliou SENE</h1>
+  <p style="text-align:center; font-style: italic;">
+  <h2 style="color: green;">Ingénieur agronome, passionné par l’innovation technologique.</h2>
 
+<section id="home" style="text-align:center;">
+    <img src="image/image (3).jpg" alt="Photo de Saliou SENE" class="profile-img">
 
-  <nav class="navbar">
-  <ul>
-    <li><a href="index.html">Home</a></li>
-    <li><a href="about.html">About</a></li>
-    <li><a href="work.html">Work</a></li>
-    <li><a href="resume.html">Resume</a></li>
-    <li><a href="contact.html">Contact</a></li>
-  </ul>
-</nav><br>
-  <section style="text-align:center;">
-    <img src="image/image (3).jpg" alt="Photo de Saliou SENE" width="300"><br>
     <p><small>Né le 25 septembre 1983 à Thiès, Sénégal</small></p>
   </section>
- 
-<header> <style>= /* Barre de navigation horizontale */
-.navbar {
-  background-color: #0d3b66;
-  padding: 15px 0;
-  position: fixed;
-  top: 0;
-  width: 100%;
-  z-index: 100;
-}
 
-.navbar ul {
-  list-style: none;
-  display: flex;
-  justify-content: center;
-  margin: 0;
-  padding: 0;
-}
-
-.navbar ul li {
-  margin: 0 20px;
-}
-
-.navbar ul li a {
-  text-decoration: none;
-  color: white;
-  font-weight: bold;
-  font-size: 18px;
-  transition: color 0.3s;
-}
-
-.navbar ul li a:hover {
-  color: #ffa500;
-}
-</style></header>
-  
-  <header style="text-align:center; padding: 50px;">
-    <h1>Saliou SENE</h1>
-    <p>Ingénieur agronome passionné par l’innovation technologique</p>
-  </header>
-
-  <section style="text-align:center;">
-    <p><a href="about.html">En savoir plus sur moi</a></p>
-    <p><a href="work.html">Voir mes projets</a></p>
-    <p><a href="resume.html">Consulter mon parcours</a></p>
-    <p><a href="contact.html">Me contacter</a></p>
-  </section>
-
- 
-
+  <nav>
+  <ul class="navbar">
+    <li><a href="index.html">Accueil</a></li>
+    <li><a href="about.html">À propos</a></li>
+    <li><a href="work.html">Projets</a></li>
+   <li><a href="resume.html">Résumé</a></li>
+    <li><a href="contact.html">Contact</a></li>
+  </ul>
+</nav>
+</head>
+   <!-- Pied de page -->
   <footer style="text-align:center; margin-top: 50px;">
-    <p>2025 Saliou SENE. Tous droits réservés.</p>
+    <p>© 2025 Saliou SENE. Tous droits réservés.</p>
   </footer>
-
 </body>
 </html>
