mettre à jour resume

--- a/resume.html
+++ b/resume.html
@@ -27,6 +27,7 @@
 </section>
 
 </main>
+<a href="docs/cv de saliou sene.pdf" download class="btn-cv">📄 Télécharger mon CV</a>
 
 <div style="text-align: center; margin-top: 40px;">
   <a href="index.html">
