mettre à jour work.html

--- a/work.html
+++ b/work.html
@@ -30,6 +30,10 @@
   </a>
 </div>
 
-  <footer><p>2025 Saliou SENE</p></footer>
+    <!-- Pied de page -->
+  <footer style="text-align:center; margin-top: 50px;">
+    <p>© 2025 Saliou SENE. Tous droits réservés.</p>
+  </footer>
 </body>
 </html>
+
